--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.14",
     "morgan": "~1.9.1",
-    "uid2": "^1.0.0"
+    "uid2": "^1.0.0",
+    "uniqid": "^5.4.0"
   }
 }
